# Movara

./: CLAUDE.md  THREAT_MODEL.md
.github/scripts/: get_harbor_models.py
.github/workflows/: _test.yml  auto-label-by-package.yml  check_sdk_pin.yml  ci.yml  evals.yml  harbor.yml  pr_labeler.yml  release-please.yml  require_issue_link.yml  tag-external-issues.yml
docs/guides/: skills-with-mcp.md
examples/: README.md
examples/code-review-agent/: .gitignore  AGENTS.md  README.md  agent.py  pyproject.toml  subagents.yaml  test_agent.py
examples/code-review-agent/skills/general-review/: SKILL.md
examples/code-review-agent/skills/performance-review/: SKILL.md
examples/code-review-agent/skills/security-review/: SKILL.md
examples/data-analysis-agent/: .gitignore  AGENTS.md  README.md  analyze.py  pyproject.toml
examples/data-analysis-agent/data/: sample_sales.csv
examples/data-analysis-agent/skills/anomaly-detection/: SKILL.md
examples/data-analysis-agent/skills/exploratory-analysis/: SKILL.md
examples/data-analysis-agent/skills/statistical-summary/: SKILL.md
examples/memory_agent/: README.md  agent.py  cron.py  eval.py  langgraph.json  pyproject.toml
examples/memory_agent/memory_agent/: __init__.py  prompts.py
examples/nvidia_deep_agent/src/: agent.py  backend.py
examples/skills-with-mcp/: README.md
examples/skills-with-mcp/github/: SKILL.md  helper.py
libs/cli/: CHANGELOG.md  pyproject.toml
libs/cli/deepagents_cli/: _version.py  agent.py  app.py  config.py  input.py  mcp_tools.py  server_graph.py  textual_adapter.py
libs/cli/deepagents_cli/integrations/: langsmith.py
libs/cli/deepagents_cli/widgets/: approval.py  chat_input.py  loading.py  mcp_screen.py  message_store.py  messages.py  tool_widgets.py
libs/cli/tests/unit_tests/: test_app.py  test_mcp_screen.py  test_mcp_tools.py  test_model_config.py  test_reload.py  test_server_graph.py  test_textual_adapter.py  test_tool_widgets.py
libs/cli/tests/unit_tests/skills/: test_commands.py
libs/deepagents/: pyproject.toml
libs/deepagents/deepagents/: exceptions.py  graph.py
libs/deepagents/deepagents/backends/: __init__.py  filesystem.py  langsmith.py  local_shell.py  sandbox.py  store.py
libs/deepagents/deepagents/middleware/: __init__.py  filesystem.py  fix_malformed_gemini.py  repl.py  skill_tools.py  skills.py  subagents.py  summarization.py
libs/deepagents/tests/evals/: README.md  llm_judge.py  test_followup_quality.py  test_memory_multiturn.py  test_parallel_data_stress.py  test_tool_selection.py  test_tool_usage_incident_graph.py  utils.py
libs/deepagents/tests/integration_tests/: test_langsmith_sandbox.py  test_skill_tools_middleware.py
libs/deepagents/tests/unit_tests/: test_end_to_end.py  test_local_sandbox_operations.py  test_local_shell.py  test_middleware.py  test_subagents.py
libs/deepagents/tests/unit_tests/backends/: test_filesystem_backend.py  test_filesystem_backend_async.py  test_langsmith_backend.py  test_langsmith_sandbox.py  test_local_shell_backend.py  test_sandbox_backend.py
libs/deepagents/tests/unit_tests/middleware/: test_compact_tool.py  test_filesystem_middleware_init.py  test_monty_middleware.py  test_repl_tool.py  test_skill_tools_middleware.py  test_skills_middleware.py  test_skills_middleware_async.py  test_subagent_middleware_init.py  test_summarization_factory.py  test_tool_schemas.py
libs/deepagents/tests/unit_tests/smoke_tests/: test_system_prompt.py
libs/harbor/: Makefile  pyproject.toml
libs/harbor/deepagents_harbor/: backend.py  deepagents_wrapper.py  radar.py
libs/harbor/scripts/: generate_radar.py  harbor_langsmith.py
libs/harbor/tests/unit_tests/: test_backend.py  test_radar.py
