[project]
name = "memory-agent-example"
version = "0.1.0"
description = "Memory-enhanced deep agent that improves over time through learned global and per-user system prompts"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.0",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.1",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memory_agent"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "I",
    "D",
    "D401",
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
